<resources>
    <string name="app_name">Agregar Contacto</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="fecha_nacimiento">Fecha de nacimiento:</string>
    <string name="telefono">Teléfono:</string>
    <string name="email">Email:</string>
    <string name="descripcion">Descripción del contacto:</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="confirmar_datos">Confirmar datos</string>
    <string name="editar_datos">Editar Datos</string>
</resources>